[refactor](structure) Extract desktop entrypoint as a standalone module