@@ -1,6 +1,5 @@
 import com.android.SdkConstants
 import com.codingfeline.buildkonfig.compiler.FieldSpec.Type
-import org.jetbrains.compose.desktop.application.dsl.TargetFormat
 import org.jetbrains.kotlin.gradle.ExperimentalWasmDsl
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import java.util.Properties
@@ -137,7 +136,7 @@ kotlin {
                 implementation(compose.desktop.currentOs) {
                     exclude("org.jetbrains.compose.material")
                 }
-                implementation(libs.kotlinx.coroutinesSwing)
+                implementation(libs.kotlinx.coroutines.swing)
 
                 implementation(libs.ktor.client.cio)
                 implementation(libs.logback)
@@ -209,74 +208,10 @@ val gitVersionName = providers.exec {
 
 val gitVersionNameShort = gitVersionName.map { it.substringBefore("-") }
 
-compose.desktop {
-    application {
-        mainClass = "world.hachimi.app.MainKt"
-        jvmArgs += listOf("-XX:+UseZGC", "-XX:+ZGenerational", "-Xms128M", "-Xmx512M")
-        val flavor = project.findProperty("buildkonfig.flavor")
-        when (flavor) {
-            "release" -> nativeDistributions {
-                targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
-                packageName = "Hachimi World"
-                vendor = "Hachimi World, NPO"
-                copyright = "© 2025 Hachimi World Open Source Project"
-                packageVersion = gitVersionNameShort.get()
-                licenseFile = rootProject.file("LICENSE")
-
-                modules("jdk.unsupported", "java.naming")
-
-                windows {
-                    upgradeUuid = "1544B476-25C9-4A01-705E-B374B14B2F1B"
-                    perUserInstall = true
-                    dirChooser = false
-                    shortcut = true
-                    menu = true
-                    iconFile.set(rootProject.file("icons/icon.ico"))
-                }
-                macOS {
-                    appCategory = "public.app-category.entertainment"
-                    packageName = "基米天堂"
-                    dockName = "基米天堂"
-                    bundleID = "world.hachimi.app"
-                    iconFile.set(rootProject.file("icons/icon.icns"))
-                }
-                linux {
-                    packageName = "hachimi-world" // Linux does not support Chinese characters
-                    iconFile.set(rootProject.file("icons/icon.png"))
-                }
-            }
-            else -> nativeDistributions {
-                targetFormats(TargetFormat.Dmg, TargetFormat.Exe, TargetFormat.Deb)
-                packageName = "Hachimi World Dev"
-                packageVersion = gitVersionNameShort.get()
-                modules("jdk.unsupported", "java.naming")
-
-                windows {
-                    upgradeUuid = "8AD88FC9-A6A2-478D-9E80-FF735EE15785"
-                    perUserInstall = true
-                    dirChooser = false
-                    shortcut = true
-                    menu = true
-                    iconFile.set(rootProject.file("icons/icon.ico"))
-                }
-                macOS {
-                    packageName = "基米天堂 Dev"
-                    bundleID = "world.hachimi.app.dev"
-                    appCategory = "public.app-category.entertainment"
-                    iconFile.set(rootProject.file("icons/icon.icns"))
-                }
-                linux {
-                    packageName = "hachimi-world-dev" // Linux does not support Chinese characters
-                    iconFile.set(rootProject.file("icons/icon.png"))
-                }
-            }
-        }
-    }
-}
 
 buildkonfig {
     packageName = "world.hachimi.app"
-//    exposeObjectWithName = "BuildKonfig"
+    exposeObjectWithName = "BuildKonfig"
 
     val props = Properties().apply { load(rootProject.file(SdkConstants.FN_LOCAL_PROPERTIES).reader()) }
 
